--- a/book_mark/package.json
+++ b/book_mark/package.json
@@ -24,6 +24,9 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "@emotion/react": "^11.9.0",
+        "@emotion/styled": "^11.8.1",
+        "@mui/material": "^5.8.1",
         "react-router-dom": "^6.3.0"
     }
 }
